...
    
    // MARK: - API
    
    func setIsLiked(_ isLiked: Bool) {
        let image = isLiked ? UIImage(resource: .likeButtonOn) : UIImage(resource: .likeButtonOff)
        likeButton.setImage(image, for: .normal)
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }
    
    func setLikeEnabled(_ enabled: Bool) {
        likeButton.isEnabled = enabled
    }
}
...
