...
        button.translatesAutoresizingMaskIntoConstraints = false
        let backImage = UIImage(resource: .backwardButton)
        button.setImage(backImage, for: .normal)
        button.tintColor = .white
        button.layer.cornerRadius = 24
        button.addTarget(self, action: #selector(didTapBackButton), for: .touchUpInside)
        button.accessibilityIdentifier = "nav back button white"
        return button
    }()
    
    private lazy var shareButton: UIButton = {
        let button = UIButton(type: .custom)
        button.translatesAutoresizingMaskIntoConstraints = false
...
