//
//  ImageFeedUITests.swift
//  ImageFeedUITests
//
//  Created by Павел Кузнецов on 18.01.2026.
//

import XCTest

final class ImageFeedUITests: XCTestCase {

    private let app = XCUIApplication()
        
    override func setUpWithError() throws {
        continueAfterFailure = false
        app.launch()
    }
        
    func testAuth() throws {
        app.buttons["Authenticate"].tap()
        
        let webView = app.webViews["authWebView"]
        
        XCTAssertTrue(webView.waitForExistence(timeout: 10))
        
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 10))
        
        passwordTextField.tap()
        passwordTextField.typeText("")
        webView.swipeUp()
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 5))
        
        loginTextField.tap()
        loginTextField.typeText("")
        let coord = webView.coordinate(withNormalizedOffset: CGVector(dx: 0.1, dy: 0.1))
        coord.tap()
        webView.swipeDown()
        
        webView.buttons["Login"].tap()
        
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        
        XCTAssertTrue(cell.waitForExistence(timeout: 5))
    }
    
    func testFeed() throws {
        let tablesQuery = app.tables
            
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        cell.swipeUp()
            
        sleep(2)
            
        let cellToLike = tablesQuery.children(matching: .cell).element(boundBy: 1)
            
        cellToLike.buttons["like button off"].tap()
        cellToLike.buttons["like button on"].tap()
            
        sleep(2)
            
        cellToLike.tap()
            
        sleep(2)
            
        let image = app.scrollViews.images.element(boundBy: 0)
        image.pinch(withScale: 3, velocity: 1)
        image.pinch(withScale: 0.5, velocity: -1)
            
        let navBackButtonWhiteButton = app.buttons["nav back button white"]
        navBackButtonWhiteButton.tap()
    }
    
    func testProfile() throws {
        sleep(3)
        app.tabBars.buttons.element(boundBy: 1).tap()
       
        XCTAssertTrue(app.staticTexts["Name Lastname"].exists)
        XCTAssertTrue(app.staticTexts["@username"].exists)
        
        app.buttons["logout button"].tap()
        
        app.alerts["Пока, пока!"].scrollViews.otherElements.buttons["Да"].tap()
    }
}
